Task/update competitions config 491 (#495)
* Created storage.yml example.
* Update example deploy_config and competitions_config.
* Update gitignore.
* Create example config files.
* Updated views with text from competitions_config.yml.
* Changed name of idp_cert.
* Added notes for documentation to readme.

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,9 @@
 # Ignore configuration yml files
 /config/attribute-map.yml
 /config/competitions_config.yml
+/config/database.yml
 /config/deploy_config.yml
+/config/storage.yml
 
 # Rspec
 /spec/examples.txt
