--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 # Ignore configuration yml files
 /config/attribute-map.yml
 /config/competitions_config.yml
+/config/credentials.yml.enc
 /config/database.yml
 /config/deploy_config.yml
 /config/storage.yml
