--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,9 @@
 # Ignore configuration yml files
 /config/attribute-map.yml
 /config/competitions_config.yml
-/config/credentials.yml.enc
 /config/database.yml
 /config/deploy_config.yml
+/config/secrets.yml
 /config/storage.yml
 
 # Rspec
