Task/remove credentials from repo 493 (#506)
* Remove credentials from repo
* Switch credentials to secrets. #493
* Added documentation. #493

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 /config/competitions_config.yml
 /config/database.yml
 /config/deploy_config.yml
+/config/secrets.yml
 /config/storage.yml
 
 # Rspec
