--- a/config/competitions_config.example.yml
+++ b/config/competitions_config.example.yml
@@ -9,7 +9,7 @@ development: # Change name per environment e.g. staging, production, etc.
   mailer:
     mailer_address: # <APP_EMAIL_ADDRESS>
     delivery_method: # e.g. smtp
-    raise_delivery_errors: # <BOOLEAN> Default is false. If true, configure the external email server for imediate delivery.
+    raise_delivery_errors: # <BOOLEAN> Default is false. If true, configure the external email server for immediate delivery.
     perform_deliveries: # <BOOLEAN> Default is true. Determines whether deliveries are carried out when the deliver method is invoked on the Mail message.
     # NOTE: Update smtp_settings in config/secrets.yml.
   saml: # See https://github.com/apokalipto/devise_saml_authenticatable for more information
