Changes from review of documentation. #509

--- a/config/attribute-map.example.yml
+++ b/config/attribute-map.example.yml
@@ -3,7 +3,7 @@
 # https://github.com/apokalipto/devise_saml_authenticatable
 
 # attribute-map.yml
-"urn:mace:dir:attribute-def:uid": "user_name"
+"urn:mace:dir:attribute-def:uid": "upn"
 "urn:mace:dir:attribute-def:email": "email"
 "urn:mace:dir:attribute-def:name": "last_name"
-"urn:mace:dir:attribute-def:givenName": "name"
+"urn:mace:dir:attribute-def:givenName": "first_name"
