--- a/config/competitions_config.example.yml
+++ b/config/competitions_config.example.yml
@@ -1,29 +1,33 @@
-development: # Change name per environment e.g. staging, production, etc.
+# Change name per environment e.g. staging, production, etc.
+# Below find the configurations for a localhost development configuration.
+development:
   application_name: 'Competitions' # or replace with <YOUR_APPLICATION_NAME>
   contact_email: # <APP_EMAIL_ADDRESS>
-  app_domain: # e.g. 'localhost', 'example.edu', etc.
-  subdomain: # e.g. '', 'competitions', etc.
+  app_domain: 'localhost' # e.g. 'localhost', 'example.edu', etc.
+  subdomain: '' # e.g. '', 'competitions', etc.
   default_url_options:
-    host: # e.g. localhost, https://competitions_example.com, etc.
-    port: # e.g. '', 3000, etc.
+    host: 'localhost' # e.g. localhost, https://competitions_example.com, etc.
+    port: 3000 # e.g. '', 3000, etc.
   mailer:
     mailer_address: # <APP_EMAIL_ADDRESS>
-    delivery_method: # e.g. smtp
-    raise_delivery_errors: # <BOOLEAN> Default is false. If true, configure the external email server for immediate delivery.
-    perform_deliveries: # <BOOLEAN> Default is true. Determines whether deliveries are carried out when the deliver method is invoked on the Mail message.
+    delivery_method: smtp # e.g. smtp
+    raise_delivery_errors: false # Default is false. If true, configure the external email server for immediate delivery.
+    perform_deliveries: true # Default is true. Determines whether deliveries are carried out when the deliver method is invoked on the Mail message.
     # NOTE: Update smtp_settings in config/secrets.yml.
-  saml: # See https://github.com/apokalipto/devise_saml_authenticatable for more information
-    saml_default_user_key: # The user will be looked up by this key
-    sign_out_url: # URL in your SP that the IDP should send users back to
-    assertion_consumer_service_url: # e.g. 'http://localhost:3000/users/saml/auth'
-    assertion_consumer_service_binding: # e.g. 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST'
-    name_identifier_format: # e.g. "urn:oasis:names:tc:SAML:2.0:nameid-format:<IDP_DEFAULT_USER_KEY>"
-    issuer: # e.g. 'http://localhost:3000/users/saml/metadata'
-    authn_context: # e.g. ''
-    idp_slo_target_url: #IDP logout URL
-    idp_sso_target_url: #IDP login URL
+  # See https://github.com/apokalipto/devise_saml_authenticatable for more information.
+  saml:
+    saml_default_user_key: 'email' # The user will be looked up by this key
+    sign_out_url: 'http://localhost:3000' # URL in your SP that the IDP should send users back to
+    assertion_consumer_service_url: 'http://localhost:3000/users/saml/auth' # e.g. 'http://localhost:3000/users/saml/auth'
+    assertion_consumer_service_binding: 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST' # e.g. 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST'
+    name_identifier_format: 'urn:oasis:names:tc:SAML:1.1:nameid-format:email' # e.g. 'urn:oasis:names:tc:SAML:2.0:nameid-format:<IDP_DEFAULT_USER_KEY>'
+    issuer: 'http://localhost:3000/users/saml/metadata' # e.g. 'http://localhost:3000/users/saml/metadata'
+    authn_context: '' # e.g. ''
+    idp_slo_target_url: #<IDP logout URL>
+    idp_sso_target_url: #<IDP login URL>
     # NOTE: Update idp_cert in config/secrets.yml.
-# test: Test should be included and configured in local environment.
+#Test should be included and configured in local environment.
+# test:
   # application_name: 'Competitions' # or replace with <YOUR_APPLICATION_NAME>
   # contact_email: # <APP_EMAIL_ADDRESS>
   # app_domain:  'localhost'
@@ -36,14 +40,15 @@ development: # Change name per environment e.g. staging, production, etc.
   #.  delivery_method: test
   #   raise_delivery_errors:
   #   perform_deliveries:
-  # saml: # See https://github.com/apokalipto/devise_saml_authenticatable for more information
-  #   saml_default_user_key: # The user will be looked up by this key
-  #   sign_out_url: # URL in your SP that the IDP should send users back to
-  #   assertion_consumer_service_url: # e.g. 'http://localhost:3000/users/saml/auth'
-  #   assertion_consumer_service_binding: # e.g. 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST'
-  #   name_identifier_format: # e.g. "urn:oasis:names:tc:SAML:2.0:nameid-format:<IDP_DEFAULT_USER_KEY>"
-  #   issuer: # e.g. 'http://localhost:3000/users/saml/metadata'
-  #   authn_context: # e.g. ''
+  # See https://github.com/apokalipto/devise_saml_authenticatable for more information.
+  # saml:
+  #   saml_default_user_key: 'email' # The user will be looked up by this key
+  #   sign_out_url: 'http://localhost:3000' # URL in your SP that the IDP should send users back to
+  #   assertion_consumer_service_url: 'http://localhost:3000/users/saml/auth' # e.g. 'http://localhost:3000/users/saml/auth'
+  #   assertion_consumer_service_binding: 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST' # e.g. 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST'
+  #   name_identifier_format:  'urn:oasis:names:tc:SAML:1.1:nameid-format:email' # e.g. 'urn:oasis:names:tc:SAML:2.0:nameid-format:<IDP_DEFAULT_USER_KEY>'
+  #   issuer: 'http://localhost:3000/users/saml/metadata' # e.g. 'http://localhost:3000/users/saml/metadata'
+  #   authn_context: '' # e.g. ''
   #   idp_slo_target_url: #IDP logout URL
   #   idp_sso_target_url: #IDP login URL
   #   # Update idp_cert in config/secrets.yml.
