--- a/config/competitions_config.example.yml
+++ b/config/competitions_config.example.yml
@@ -25,6 +25,21 @@ development:
     authn_context: '' # e.g. ''
     idp_slo_target_url: #<IDP logout URL>
     idp_sso_target_url: #<IDP login URL>
+    # Most of the following idp_security  settings
+    # are the default settings from the ruby-saml gem.
+    # We have changed the want_assertions_signed to true.
+    idp_security: { authn_requests_signed: false,
+                    logout_requests_signed: false,
+                    logout_responses_signed: false,
+                    want_assertions_signed: true,
+                    want_assertions_encrypted: false,
+                    want_name_id: false,
+                    metadata_signed: false,
+                    embed_sign: false,
+                    digest_method: "http://www.w3.org/2000/09/xmldsig#sha1",
+                    signature_method: "http://www.w3.org/2000/09/xmldsig#rsa-sha1",
+                    check_idp_cert_expiration: false,
+                    check_sp_cert_expiration: false }
     # NOTE: Update idp_cert in config/secrets.yml.
 #Test should be included and configured in local environment.
 # test:
@@ -51,4 +66,16 @@ development:
   #   authn_context: '' # e.g. ''
   #   idp_slo_target_url: #IDP logout URL
   #   idp_sso_target_url: #IDP login URL
+  # idp_security: { authn_requests_signed: false,
+  #                   logout_requests_signed: false,
+  #                   logout_responses_signed: false,
+  #                   want_assertions_signed: true,
+  #                   want_assertions_encrypted: false,
+  #                   want_name_id: false,
+  #                   metadata_signed: false,
+  #                   embed_sign: false,
+  #                   digest_method: "http://www.w3.org/2000/09/xmldsig#sha1",
+  #                   signature_method: "http://www.w3.org/2000/09/xmldsig#rsa-sha1",
+  #                   check_idp_cert_expiration: false,
+  #                   check_sp_cert_expiration: false }
   #   # Update idp_cert in config/secrets.yml.
