--- a/config/storage.example.yml
+++ b/config/storage.example.yml
@@ -7,11 +7,10 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials or secrets to store sensitive information.
-# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+#   access_key_id: <%= Rails.application.secrets[:aws_access_key_id] %>
+#   secret_access_key: <%= Rails.application.secrets[:aws_secret_access_key] %>
 #   region: us-east-1
 #   bucket: your_own_bucket
 
