--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,11 @@
 /config/master.key
 
 # Ignore configuration yml files
-/config/attribute-map.yml
+/config/competitions_config.yml
+/config/database.yml
 /config/deploy_config.yml
+/config/secrets.yml
+/config/storage.yml
 
 # Rspec
 /spec/examples.txt
