--- a/config/competitions_config.example.yml
+++ b/config/competitions_config.example.yml
@@ -50,48 +50,48 @@ development:
                     check_idp_cert_expiration: false,
                     check_sp_cert_expiration: false }
     # NOTE: Update idp_cert in config/secrets.yml.
-# test:
-  # application_name: 'Competitions' # or replace with <YOUR_APPLICATION_NAME>
-  # contact_email: # <APP_EMAIL_ADDRESS>
-  # app_domain:  'localhost'
-  # subdomain: ''
-  # default_url_options:
-  #   host: 'localhost'
-  #   port: 3000
-  # mailer:
-  #   mailer_address: # <APP_EMAIL_ADDRESS>
-  #.  delivery_method: test
-  #   raise_delivery_errors:
-  #   perform_deliveries:
+test:
+  application_name: 'Competitions' # or replace with <YOUR_APPLICATION_NAME>
+  contact_email: # <APP_EMAIL_ADDRESS>
+  app_domain:  'localhost'
+  subdomain: ''
+  default_url_options:
+    host: 'localhost'
+    port: 3000
+  mailer:
+    mailer_address: # <APP_EMAIL_ADDRESS>
+    delivery_method: test
+    raise_delivery_errors:
+    perform_deliveries:
   # See https://github.com/apokalipto/devise_saml_authenticatable for more information.
-  # saml:
-  #   idp_entity_id: ''
-  #   idp_entity_name: 'TEST'
-  #   saml_default_user_key: 'email' # The user will be looked up by this key
-      # This file maps the IDP SAML attributes with the User model.
-  #   attribute_map:  { 'email': 'email',
-  #                     'firstName': 'first_name',
-  #                     'lastName': 'last_name',
-  #                     'upn': 'upn'
-  #.                  }
-  #   sign_out_url: 'http://localhost:3000' # URL in your SP that the IDP should send users back to
-  #   assertion_consumer_service_url: 'http://localhost:3000/users/saml/auth' # e.g. 'http://localhost:3000/users/saml/auth'
-  #   assertion_consumer_service_binding: 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST' # e.g. 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST'
-  #   name_identifier_format:  'urn:oasis:names:tc:SAML:1.1:nameid-format:email' # e.g. 'urn:oasis:names:tc:SAML:2.0:nameid-format:<IDP_DEFAULT_USER_KEY>'
-  #   issuer: 'http://localhost:3000/users/saml/metadata' # e.g. 'http://localhost:3000/users/saml/metadata'
-  #   authn_context: '' # e.g. ''
-  #   idp_slo_target_url: #IDP logout URL
-  #   idp_sso_target_url: #IDP login URL
-  #   idp_security: { authn_requests_signed: false,
-  #                   logout_requests_signed: false,
-  #                   logout_responses_signed: false,
-  #                   want_assertions_signed: true,
-  #                   want_assertions_encrypted: false,
-  #                   want_name_id: false,
-  #                   metadata_signed: false,
-  #                   embed_sign: false,
-  #                   digest_method: "http://www.w3.org/2000/09/xmldsig#sha1",
-  #                   signature_method: "http://www.w3.org/2000/09/xmldsig#rsa-sha1",
-  #                   check_idp_cert_expiration: false,
-  #                   check_sp_cert_expiration: false }
-  #   # Update idp_cert in config/secrets.yml.
+  saml:
+    idp_entity_id: ''
+    idp_entity_name: 'TEST'
+    saml_default_user_key: 'email' # The user will be looked up by this key
+      This file maps the IDP SAML attributes with the User model.
+    attribute_map:  { 'email': 'email',
+                      'firstName': 'first_name',
+                      'lastName': 'last_name',
+                      'upn': 'upn'
+                    }
+    sign_out_url: 'http://localhost:3000' # URL in your SP that the IDP should send users back to
+    assertion_consumer_service_url: 'http://localhost:3000/users/saml/auth' # e.g. 'http://localhost:3000/users/saml/auth'
+    assertion_consumer_service_binding: 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST' # e.g. 'urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST'
+    name_identifier_format:  'urn:oasis:names:tc:SAML:1.1:nameid-format:email' # e.g. 'urn:oasis:names:tc:SAML:2.0:nameid-format:<IDP_DEFAULT_USER_KEY>'
+    issuer: 'http://localhost:3000/users/saml/metadata' # e.g. 'http://localhost:3000/users/saml/metadata'
+    authn_context: '' # e.g. ''
+    idp_slo_target_url: #IDP logout URL
+    idp_sso_target_url: #IDP login URL
+    idp_security: { authn_requests_signed: false,
+                    logout_requests_signed: false,
+                    logout_responses_signed: false,
+                    want_assertions_signed: true,
+                    want_assertions_encrypted: false,
+                    want_name_id: false,
+                    metadata_signed: false,
+                    embed_sign: false,
+                    digest_method: "http://www.w3.org/2000/09/xmldsig#sha1",
+                    signature_method: "http://www.w3.org/2000/09/xmldsig#rsa-sha1",
+                    check_idp_cert_expiration: false,
+                    check_sp_cert_expiration: false }
+    # Update idp_cert in config/secrets.yml.
