--- a/config/competitions_config.example.yml
+++ b/config/competitions_config.example.yml
@@ -8,7 +8,7 @@ development:
   default_url_options:
     host: 'localhost' # e.g. localhost, https://competitions_example.com, etc.
     port: 3000 # e.g. '', 3000, etc.
-  blocked_emails:
+  saml_domains:
     - localhost
     - blocked_email.edu
     # - <YOUR_INSTITUTIONAL_DOMAIN>
@@ -25,10 +25,10 @@ development:
     saml_default_user_key: 'email' # The user will be looked up by this key
     # The following maps the IDP SAML attribute's names(left)
     #  with the User model attributes.
-    attribute_map:  { "email": "email",
-                      "firstName": "first_name",
-                      "lastName": "last_name",
-                      "uid": "uid"
+    attribute_map:  { 'email': 'email',
+                      'firstName': 'first_name',
+                      'lastName': 'last_name',
+                      'uid': 'uid'
                     }
     sign_out_url: 'http://localhost:3000' # URL in your SP that the IDP should send users back to
     assertion_consumer_service_url: 'http://localhost:3000/users/saml/auth' # e.g. 'http://localhost:3000/users/saml/auth'
@@ -62,7 +62,7 @@ test:
   default_url_options:
     host: 'localhost'
     port: 3000
-  blocked_emails: # This is an array of domains that could be in the SAML user.
+  saml_domains: # This is an array of domains that could be in the SAML user.
     - localhost
     - blocked_email.edu
     # - <YOUR_INSTITUTIONAL_DOMAIN>
