Task/two user types 554 (#576)
* Initial commit for open-sourcing project

Task/create config file 434 (#483)
#434 
#490

* Task/update competitions config 491 (#495)

* Created storage.yml example.
* Update example deploy_config and competitions_config.
* Update gitignore.
* Create example config files.
* Updated views with text from competitions_config.yml.
* Changed name of idp_cert.
* Added notes for documentation to readme.

* Make environments example files and update readme. #492 (#501)

* Task/remove credentials from repo 493 (#506)

* Remove credentials from repo
* Switch credentials to secrets. #493
* Added documentation. #493

* Fix Typo.

* Changes from review of documentation. #509 (#511)

* take out specifics from error pages. #494 (#522)

* take out specifics from error pages. #494

* Removed some of the unnecessary CSS. #494

* Feature/nu shibboleth 438 (#531)

* Upgraded ruby version to 2.6.6. #438
* change quotation marks in migration. #438
* remove change in quotation marks. #438
* Change failing migration. #438
* made the idp_security settings configurable. #438

* Task/standardize to haml (#499)

* Release/0.9.9 (#505)

* Bump version

* Final front-end updates in #451

* task/0.9.9 testing feedback (#502)

* Fix typo and reword text #453

* Account for excel reserved chars in sheet titles #459

* Remove devise views. #488 (#508)

* Task/update submission show layout 461 (#510)

* Added some formatting to the submissions show page. #461
* Changes suggested by John. #461
* Change to font-size after conversation. #461

* Task/remove draft grants from my reviews 355 (#524)

* added conditionals for whether a grant is published to review index. #355
* add specs for draft grant review UI. #355

* grant creator request review is inaccessible (#529)

* Change controller inheritance in order to use correct callback #527

* Add show spec to ensure basic functionality #527

* added

--- a/config/competitions_config.example.yml
+++ b/config/competitions_config.example.yml
@@ -8,6 +8,10 @@ development:
   default_url_options:
     host: 'localhost' # e.g. localhost, https://competitions_example.com, etc.
     port: 3000 # e.g. '', 3000, etc.
+  saml_domains:
+    - localhost
+    - blocked_email.edu
+    # - <YOUR_INSTITUTIONAL_DOMAIN>
   mailer:
     mailer_address: # <APP_EMAIL_ADDRESS>
     delivery_method: smtp # e.g. smtp
@@ -17,14 +21,14 @@ development:
   # See https://github.com/apokalipto/devise_saml_authenticatable for more information.
   saml:
     idp_entity_id: ''
-    idp_entity_name: 'DEV'
+    idp_entity_name: 'DEVELOPMENT'
     saml_default_user_key: 'email' # The user will be looked up by this key
     # The following maps the IDP SAML attribute's names(left)
     #  with the User model attributes.
     attribute_map:  { 'email': 'email',
                       'firstName': 'first_name',
                       'lastName': 'last_name',
-                      'upn': 'upn'
+                      'uid': 'uid'
                     }
     sign_out_url: 'http://localhost:3000' # URL in your SP that the IDP should send users back to
     assertion_consumer_service_url: 'http://localhost:3000/users/saml/auth' # e.g. 'http://localhost:3000/users/saml/auth'
@@ -58,6 +62,10 @@ test:
   default_url_options:
     host: 'localhost'
     port: 3000
+  saml_domains: # This is an array of domains that could be in the SAML user.
+    - localhost
+    - blocked_email.edu
+    # - <YOUR_INSTITUTIONAL_DOMAIN>
   mailer:
     mailer_address: # <APP_EMAIL_ADDRESS>
     delivery_method: test
@@ -72,7 +80,7 @@ test:
     attribute_map:  { 'email': 'email',
                       'firstName': 'first_name',
                       'lastName': 'last_name',
-                      'upn': 'upn'
+                      'uid': 'uid'
                     }
     sign_out_url: 'http://localhost:3000' # URL in your SP that the IDP should send users back to
     assertion_consumer_service_url: 'http://localhost:3000/users/saml/auth' # e.g. 'http://localhost:3000/users/saml/auth'
