--- a/config/secrets.example.yml
+++ b/config/secrets.example.yml
@@ -21,15 +21,16 @@ development:
   aws_secret_access_key:
 
   # Below are the SMTP settings for ActionMailer.
+  # Here they are configured for mailcatcher (https://mailcatcher.me).
   # Descriptions of each of the settings can be found in the rails docs,
   # although your institution may have its own guidelines for these settings.
   # https://guides.rubyonrails.org/v5.2.0/action_mailer_basics.html#action-mailer-configuration
-  smtp_settings: { address:                '',
-                   port:                   ,
-                   domain:                 '',
-                   user_name:              '',
-                   password:               '',
-                   authentication:         '',
+  smtp_settings: { address:                '127.0.0.1',
+                   port:                   1025,
+                   domain:                 ,
+                   user_name:              ,
+                   password:               ,
+                   authentication:         ,
                    enable_starttls_auto:   ,
                    ssl:                     }
 
@@ -43,12 +44,12 @@ test:
   database_password:
   aws_access_key_id:
   aws_secret_access_key:
-  smtp_settings: { address:                '',
-                   port:                   ,
-                   domain:                 '',
-                   user_name:              '',
-                   password:               '',
-                   authentication:         '',
+  smtp_settings: { address:                '127.0.0.1',
+                   port:                   1025,
+                   domain:                 ,
+                   user_name:              ,
+                   password:               ,
+                   authentication:         ,
                    enable_starttls_auto:   ,
                    ssl:                     }
   idp_cert:
