--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@hotwired/turbo-rails": "^7.0.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0"
+    "@rails/ujs": "^6.0.0",
+    "esbuild": "^0.13.12"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds"
   }
 }
