--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.0.1",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.1.4-1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "esbuild": "^0.13.12"
+    "esbuild": "^0.13.12",
+    "foundation-datepicker": "^1.5.6",
+    "foundation-sites": "^6.7.4",
+    "jquery": "^3.6.0",
+    "jquery-ui": "^1.13.0",
+    "jquery_nested_form": "^0.3.3",
+    "select2": "^4.1.0-rc.0",
+    "trix": "^1.3.1"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds"
