--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.0",
     "jquery_nested_form": "^0.3.3",
+    "motion-ui": "^2.0.3",
     "select2": "^4.1.0-rc.0",
     "trix": "^1.3.1"
   },
