--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "@rails/ujs": "^6.0.0",
     "esbuild": "^0.13.12",
     "foundation-datepicker": "^1.5.6",
-    "foundation-sites": "^6.7.4",
+    "foundation-sites": "6.6.3",
     "jquery": "^3.6.0",
-    "jquery-ui": "^1.13.0",
     "jquery_nested_form": "^0.3.3",
     "motion-ui": "^2.0.3",
     "select2": "^4.1.0-rc.0",
