--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "private": true,
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
-    "@hotwired/turbo-rails": "^7.0.1",
+    "@hotwired/turbo-rails": "^7.2.4",
     "@nathanvda/cocoon": "^1.2.14",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.1.4-1",
     "@rails/activestorage": "^6.0.0",
+    "@rails/request.js": "^0.0.8",
     "@rails/ujs": "^6.0.0",
     "esbuild": "^0.13.12",
     "foundation-datepicker": "^1.5.6",
@@ -22,6 +23,7 @@
     "jquery_nested_form": "^0.3.3",
     "motion-ui": "^2.0.3",
     "select2": "^4.1.0-rc.0",
+    "tom-select": "^2.2.2",
     "trix": "^1.3.1"
   },
   "scripts": {
