--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hotwired/turbo-rails": "^7.2.4",
     "@nathanvda/cocoon": "^1.2.14",
     "@rails/actioncable": "^6.0.0",
-    "@rails/actiontext": "^6.1.4-1",
+    "@rails/actiontext": "^7.1.3",
     "@rails/activestorage": "^6.0.0",
     "@rails/request.js": "^0.0.8",
     "@rails/ujs": "^6.0.0",
@@ -25,7 +25,7 @@
     "motion-ui": "^2.0.3",
     "select2": "^4.1.0-rc.0",
     "tom-select": "^2.2.2",
-    "trix": "^1.3.1"
+    "trix": "^2.0.8"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds"
